# hawkscan

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: dynamic-analysis.md
hawk_malware_scan/: __init__.py  ai.py  cli.py  report.py  report_html.py  stix.py  vt.py  webui.py
hawk_malware_scan/analyzers/: android_analyzer.py  base.py  binprofile.py  capability_analyzer.py  deobfuscate.py  elf_analyzer.py  email_analyzer.py  emulate.py  entropy.py  lnk_analyzer.py  macho_analyzer.py  ole_analyzer.py  pe_analyzer.py  rtf_analyzer.py  script_analyzer.py  secrets_analyzer.py  stego_analyzer.py  yara_analyzer.py
hawk_malware_scan/core/: config.py  engine.py  fileinfo.py  findings.py  rules_update.py
hawk_malware_scan/dynamic/: adb_tracer.py  sandbox.py  strace_tracer.py
hawk_malware_scan/intel/: __init__.py  capabilities.py  sigcheck.py
hawk_malware_scan/rules/: hawk_malware_scan_attack.yar  hawk_malware_scan_behaviors.yar  hawk_malware_scan_builtin.yar  hawk_malware_scan_cloud.yar  hawk_malware_scan_families.yar  hawk_malware_scan_linux.yar  hawk_malware_scan_linux_threats.yar  hawk_malware_scan_macos.yar  hawk_malware_scan_maldoc.yar  hawk_malware_scan_mobile.yar  hawk_malware_scan_windows.yar  (+3 more)
hawkscan/: __init__.py  ai.py  cli.py  report.py  report_html.py  stix.py  vt.py  webui.py
tests/: test_analyzers.py  test_android.py  test_capabilities.py  test_carver.py  test_core.py  test_corpus.py  test_dynamic.py  test_extras.py  test_formats.py  test_report.py  test_rules.py  test_stix.py
tools/: benchmark.py  yara_assist.py
(+47 files in other folders)
