[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hawkscan"
version = "1.13.0"
description = "Offline, explainable malware scanner for any file on any OS."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "dfir-hawk" }]
license = { text = "MIT" }
keywords = ["malware", "dfir", "security", "scanner", "yara"]

# Core engine has ZERO required dependencies. Optional analyzers light up when
# these are present; install with `pip install hawkscan[full]`.
dependencies = []

[project.optional-dependencies]
full = [
    "pefile>=2023.2.7",
    "yara-python>=4.3.0",
    "oletools>=0.60",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
dynamic = [
    "psutil>=5.9",
    "frida>=16.0",
]

[project.scripts]
hawkscan = "hawkscan.cli:main"

[tool.setuptools.packages.find]
include = ["hawkscan*"]

[tool.setuptools.package-data]
hawkscan = ["rules/*.yar", "rules/*.yara"]
